2022-11-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/tmac.am (TMAC_PACKAGE_MAN, TMAC_PACKAGE_MDOC): Define
	convenience macros for in-tree documents to depend on.

2022-11-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an.tmac: Trivially refactor.  Rename `an-section` to
	`an*section`.

2022-11-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grolbp/lbp.cpp (usage): Tweak usage message.  The
	output driver should be perfectly capable of handling output
	from non-GNU (but device-independent) troffs.

2022-11-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grops/ps.cpp (usage): Employ more informative
	metasyntactic variable names in usage message.  Also summarize
	program's function and direct reader to man page if help
	explicitly requested (inferred from identity of output stream).

2022-11-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an.tmac: Trivially refactor for congruence with
	documentary terminology.  Rename strings and macros.
	- an-title                 -> an*topic
	- an-abbreviate-page-title -> an*abbreviate-page-topic
	- an-title-abbv            -> an*topic-abbv
	- an-title-string          -> an*topic-string
	- an-title-length          -> an*topic-length
	- an-title-length-prev     -> an*topic-length-prev
	- an-title-new-length      -> an*topic-new-length
	- an-page-title-style      -> an*topic-style
	(TH): Recast diagnostic message to refer to "section", not
	"volume" title.

2022-11-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an-ext.tmac: Refactor to reduce code size.  `UR` and `MT`
	have identical implementations so...
	(mV): Define new macro to perform the requisite actions, and...
	(UR, MT): Make these into wrappers calling mV.

2022-11-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an-ext.tmac (UR, MT): Fix problem with incorrect line
	lengths and occasional "can't adjust" warnings when using