@@ -255,14 +255,15 @@ man-clean:
 # ensure consistent rendering of the document, and (3) exercise this
 # feature of gropdf.
 doc/groff-man-pages.pdf: $(GROFF_MAN_PAGES_ALL) eqn pic tbl \
-	font/devpdf/freeeuro.pfa
+  $(TMAC_PACKAGE_MAN) $(TMAC_PACKAGE_MDOC) font/devpdf/freeeuro.pfa
 	$(GROFF_V)$(DOC_GROFF) -pet -mandoc -rC1 -rCHECKSTYLE=3 \
 	  -Tpdf -P-e \
 	  $(GROFF_MAN_PAGES1) \
 	  $(tmac_srcdir)/sv.tmac $(GROFF_MAN_PAGES2) \
 	  $(tmac_srcdir)/en.tmac $(GROFF_MAN_PAGES3) > $@
 
-doc/groff-man-pages.utf8.txt: $(GROFF_MAN_PAGES_ALL) eqn pic tbl
+doc/groff-man-pages.utf8.txt: $(GROFF_MAN_PAGES_ALL) eqn pic tbl \
+  $(TMAC_PACKAGE_MAN) $(TMAC_PACKAGE_MDOC)
 	$(GROFF_V)$(DOC_GROFF) -pet -Tutf8 -mandoc \
 	  -rCHECKSTYLE=3 $(GROFF_MAN_PAGES1) \
 	  $(tmac_srcdir)/sv.tmac $(GROFF_MAN_PAGES2) \
